src/pages/hatching/HatchingInventory.module.scss
@import "./../../assets/sass/variables.scss";

/* scrollbar css */
@mixin customScrollbarVertical {
    padding-right: 10px;

    &::-webkit-scrollbar {
        width: 6px;
    }

    /* Track */
    &::-webkit-scrollbar-track {
        background: transparent;
        margin: 20px 0;
    }

    /* Handle */
    &::-webkit-scrollbar-thumb {
        background: $primary;
        border-radius: 3px;
    }

    /* Handle on hover */
    &::-webkit-scrollbar-thumb:hover {
        background: $hover;
    }
}

@mixin customScrollbarHorizontal {
    padding-bottom: 10px;

    &::-webkit-scrollbar {
        height: 6px;
    }

    /* Track */
    &::-webkit-scrollbar-track {
        background: transparent;
        margin: 0 20px;
    }

    /* Handle */
    &::-webkit-scrollbar-thumb {
        background: $primary;
        border-radius: 3px;
    }

    /* Handle on hover */
    &::-webkit-scrollbar-thumb:hover {
        background: $hover;
    }
}

.hatchingCard {
    background-color: $white;
    border-radius: 30px;
    display: grid;
    grid-template-columns: 3fr 2fr;
    grid-template-rows: 100%;
    overflow: hidden;

    > .yourInventory {
        position: relative;
        border-right: 3px $primary solid;
        padding: 20px 25px 0 25px;
        min-height: 600px;
        max-height: 60vh;

        > .centeredInfo {
            display: block;
            text-align: center;
            margin: 0;
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
        }

        &::after {
            content: "";
            pointer-events: none;
            position: absolute;
            bottom: 0;
            left: -15px;
            right: 0;
            height: 80px;
            background: transparent linear-gradient(180deg, #000b2700 0%, #000b2717 30%, #000b2773 100%) 0% 0% no-repeat
                padding-box;
        }

        > h3 {
            font-family: "CHEDROS", sans-serif;
            font-size: 2rem;
            font-weight: bold;
            color: $primary;
            text-align: left;
        }

        > .items {
            @include customScrollbarVertical;
            margin-top: 1rem;
            display: grid;
            grid-template-columns: repeat(4, 1fr);
            grid-gap: 10px;
            overflow-x: auto;
            overflow-y: scroll;
            max-height: calc(100% - 2rem - 20px);

            > div {
                border-radius: 12px;
                cursor: pointer;
                margin: 3px;

                &:hover {
                    background-color: #ebebeb;
                }

                &.selected {
                    outline: 3px solid $primary;
                }

                > img {
                    max-width: 100%;
                    border-radius: 12px;
                }
            }

            padding-bottom: 20px;
        }
    }

    > .infos {
        max-height: 60vh;
        padding: 20px 25px;
        position: relative;
        min-height: 100%;

        > h3 {
            font-family: "CHEDROS", sans-serif;
            font-size: 2rem;
            font-weight: bold;
            color: $primary;
            text-align: center;
            margin-bottom: 1rem;
        }

        > .content {
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            height: 100%;
            max-height: calc(100% - 2rem - 20px);
            gap: 1rem;

            > img {
                width: 50%;
            }

            > h4 {
                font-family: "CHEDROS", sans-serif;
                font-size: 1.5rem;
                font-weight: bold;
                color: $dark;
            }

            > p {
                font-family: "Montserrat", sans-serif;
                font-size: 1.2rem;
                max-width: 70%;
                text-align: center;
            }

            > .selectedEggs {
                @include customScrollbarVertical;
                margin-top: 1rem;
                display: grid;
                grid-template-columns: repeat(2, 1fr);
                grid-gap: 10px;
                overflow: auto;
                max-height: calc(100% - 2rem - 20px);

                > div {
                    border-radius: 12px;
                    margin: 3px;

                    > img {
                        max-width: 100%;
                    }
                }

                padding-bottom: 20px;
            }
        }

        > .confirmSelection {
            z-index: 1;
            position: absolute;
            inset: 0;
            right: -15px;
            background-color: #242424de;
            display: flex;
            flex-direction: column;
            justify-content: center;
            gap: 36px;

            > p {
                font-family: "CHEDROS", sans-serif;
                font-size: 70px;
                font-weight: bold;
                color: $white;
                text-align: center;
            }

            > .actions {
                display: flex;
                align-items: center;
                justify-content: center;
                gap: 30px;

                > .button {
                    min-width: 30%;
                }
            }
        }

        > .actions {
            position: absolute;
            bottom: 0;
            right: 0;
            left: 0;
            display: flex;
            align-items: center;
            justify-content: center;
            gap: 30px;
            height: 80px;

            &::before {
                content: "";
                position: absolute;
                bottom: 0;
                left: 0;
                right: -20px;
                height: 100%;
                background: transparent linear-gradient(180deg, #000b2700 0%, #000b2717 30%, #000b2773 100%) 0% 0%
                    no-repeat padding-box;
                z-index: 0;
            }

            > .button {
                z-index: 0;
                min-width: 30%;
            }
        }
    }

    &.bySelection {
        > .yourInventory {
            > .subTitle {
                font-family: "Montserrat", sans-serif;
                font-size: 1.2rem;
                color: $dark;
            }

            > .items {
                max-height: calc(100% - 4rem - 8px);
            }
        }
    }
}

@media (max-width: 768px) {
    .hatchingCard {
        margin-bottom: 100px;
        grid-template-columns: 1fr;
        overflow: visible;
        padding-right: 0 !important;
        padding-left: 0 !important;
        grid-template-rows: auto;

        > .yourInventory {
            border-right: none;
            border-radius: 30px;
            overflow: hidden;
            min-height: 60vh;

            &::after {
                right: 0;
                left: 0;
            }

            > .items {
                grid-template-columns: repeat(3, 1fr);
            }

            &.confirmSelection {
                border-radius: 0;
            }
        }

        > .infos {
            padding: 0;

            > h3 {
                display: none;
            }

            > .content {
                display: none;
            }

            > .confirmSelection {
                position: relative;
                background-color: $white;
                padding: 25px 20px 30px 20px;
                border-radius: 0 0 30px 30px;

                > p {
                    color: $primary;
                    font-size: 2.5rem;
                }

                > .actions {
                    flex-direction: column;

                    > .button:first-of-type {
                        min-width: 50%;
                    }
                }
            }

            > .actions {
                top: 0;
                bottom: auto;

                &::before {
                    content: none;
                }
            }
        }

        &.haveInfos {
            > .yourInventory {
                border-radius: 0;
            }

            > .infos {
                padding: 24px 25px 20px 25px;

                > .content {
                    display: flex;
                }
            }
        }
    }
}

@media (max-height: 725px) {
    .hatchingCard {
        > .hatchResult {
            > .content {
                > h1 {
                    display: none;
                }

                > .subTtile {
                    display: none;
                }
            }
        }
    }
}

